--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@genkit-ai/next": "^1.13.0",
     "@hookform/resolvers": "^4.1.3",
     "@opentelemetry/exporter-jaeger": "^2.1.0",
+    "@privy-io/react-auth": "^3.0.1",
+    "@privy-io/wagmi": "^2.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -50,6 +52,7 @@
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
