--- a/env.example
+++ b/env.example
@@ -1,6 +1,5 @@
 # Privy Configuration
-NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id
+NEXT-PUBLIC_PRIVY_APP_ID=your-privy-app-id
 
-# Google AI API Key (for Genkit)
-GOOGLE_AI_API_KEY=your-google-ai-api-key
-
+# Base API URL
+NEXT_PUBLIC_API_BASE_URL=your-api-base-url
