--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,8 @@
-legacy-peer-deps=true
+# Enforce using pnpm
+engine-strict=true
+
+# Auto-install peers
+auto-install-peers=true
+
+# Hoist pattern for better compatibility
+shamefully-hoist=true
