docs: update environment variable configuration
- Set correct backend API URL: https://api.gatewayz.ai
- Add comprehensive environment setup documentation to DEVELOPMENT.md
- Include instructions for local vs production environment configuration
- Document Vercel environment variable setup process

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Privy Configuration
-NEXT-PUBLIC_PRIVY_APP_ID=your-privy-app-id
+NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id
 
-# Base API URL
-NEXT_PUBLIC_API_BASE_URL=your-api-base-url
+# Backend API URL (without trailing slash)
+NEXT_PUBLIC_API_BASE_URL=https://api.gatewayz.ai
