fix: use gatewayz-backend.vercel.app as default API for auth and chat consistency

--- a/env.example
+++ b/env.example
@@ -2,4 +2,5 @@
 NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id
 
 # Backend API URL (without trailing slash)
-NEXT_PUBLIC_API_BASE_URL=https://api.gatewayz.ai
+# Use gatewayz-backend.vercel.app for the latest backend with chat completions support
+NEXT_PUBLIC_API_BASE_URL=https://gatewayz-backend.vercel.app
