--- a/env.example
+++ b/env.example
@@ -2,5 +2,4 @@
 NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id
 
 # Backend API URL (without trailing slash)
-# Use gatewayz-backend.vercel.app for the latest backend with chat completions support
-NEXT_PUBLIC_API_BASE_URL=https://gatewayz-backend.vercel.app
+NEXT_PUBLIC_API_BASE_URL=https://api.gatewayz.ai
