feat: integrate chat history API for session management- Add Chat History API integration to load, save, create, update, and delete chat sessions- Implement error handling and fallback mechanisms for API interactions- Enhance chat session management with API session IDs and message saving- Update environment configuration to include Chat History API URL- Improve user experience with loading states and error notifications

--- a/env.example
+++ b/env.example
@@ -3,3 +3,6 @@ NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id
 
 # Backend API URL (without trailing slash)
 NEXT_PUBLIC_API_BASE_URL=https://api.gatewayz.ai
+
+# Chat History API URL - Use the same backend API
+NEXT_PUBLIC_CHAT_HISTORY_API_URL=https://api.gatewayz.ai
